Bug 792797 - Handle interrupts in the Yarr interpreter. r=dvander